--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
 <h1>PALINDROME BIRTHDAY</h1>
 <label >Enter Your Birthday</label>
 <input type="date" id="date-input" >
+<p style="color: red; font-size: 1rem">
+    Privacy Notice! We are not storing your data.
+</p>
 <button id="check-btn">Check</button>
 <div id="output-div"></div>
 </div>
     <footer>
         <a href="https://www.linkedin.com/in/yaseenmalik008/" target="  _blank " class="fa fa-2x fa-linkedin-square pr-4 social-logo " aria-hidden="true "></a>
-        <a href="https://twitter.com/MalikY_8846" target=" _blank " class="fa fa-2x fa-twitter-square pr-4 social-logo" aria-hidden="true"></a>
-        <a href="https://github.com/Maliky853" target=" _blank " class="fa fa-2x fa-github-square pr-4 social-logo" aria-hidden="true"></a>
-        <a href="mailto:maliky853@gmail.com" target=" _blank " class="fa fa-2x fa-envelope-o pr-4 social-logo" aria-hidden="true"></a>
+        <a href="https://twitter.com/yaseenmalik008" target=" _blank " class="fa fa-2x fa-twitter-square pr-4 social-logo" aria-hidden="true"></a>
+        <a href="https://github.com/yaseenmalik008" target=" _blank " class="fa fa-2x fa-github-square pr-4 social-logo" aria-hidden="true"></a>
+        <a href="mailto:malikyaseen8530@gmail.com" target=" _blank " class="fa fa-2x fa-envelope-o pr-4 social-logo" aria-hidden="true"></a>
     </footer>
 
     <script src="index.js"></script>
